test/fail/stack_ovflw01.v3
//@execute = !StackOverFlow @ 4:24
component stack_ovflw01 {
	def main() -> bool {
		return main();
	}
}
